--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "@vercel/node": "^2.9.6",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
