--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
+    "watch": "tsc -w",
     "build": "tsc",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node dist/index.ts"
   },
   "dependencies": {
     "axios": "^0.27.2",
