--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/index.js",
     "watch": "tsc -w",
     "build": "tsc",
-    "dev": "ts-node dist/index.ts"
+    "dev": "ts-node src/index.ts"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -16,8 +16,8 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
-    "@vercel/node": "^2.9.6",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.3"
   }
 }
+
