--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "discord-token-supply-bot",
+  "name": "vsol-mint-bot",
   "version": "1.0.0",
-  "description": "A Discord bot that fetches token supply using Helius RPC",
+  "description": "Discord bot that tracks vSOL token minting on Solana",
   "main": "dist/index.js",
   "scripts": {
+    "prebuild": "node src/build-check.js",
+    "build": "npx tsc",
     "start": "node dist/index.js",
-    "watch": "tsc -w",
-    "build": "tsc",
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
+  },
+  "engines": {
+    "node": ">=16.9.0"
   }
 }
-
